--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -11,30 +11,134 @@
     <groupId>cn.com.xuxiaowei</groupId>
     <artifactId>parent</artifactId>
     <version>0.0.1-SNAPSHOT</version>
+    <packaging>pom</packaging>
+
     <name>parent</name>
     <description>Demo project for Spring Boot</description>
     <properties>
         <java.version>1.8</java.version>
-    </properties>
-    <dependencies>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter</artifactId>
-        </dependency>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
 
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-test</artifactId>
-            <scope>test</scope>
-        </dependency>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+
+
+        <!-- 打包时跳过单元测试 -->
+        <skipTests>true</skipTests>
+
+    </properties>
+
+    <modules>
+        <module>a</module>
+        <module>b</module>
+    </modules>
+
+    <dependencies>
+
     </dependencies>
 
     <build>
+
+        <!-- mvn clean source:jar javadoc:jar deploy -DskipTests -->
         <plugins>
+
+            <!-- mvn clean deploy -DskipTests -->
+            <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-compiler-plugin -->
             <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.1</version>
             </plugin>
+
+            <!-- mvn clean source:jar deploy -->
+            <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-source-plugin -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-source-plugin</artifactId>
+                <version>3.2.1</version>
+            </plugin>
+
+            <!-- mvn clean javadoc:jar deploy -->
+            <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-javadoc-plugin -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <version>3.3.1</version>
+                <configuration>
+                    <encoding>UTF-8</encoding>
+                    <charset>UTF-8</charset>
+                    <docencoding>UTF-8</docencoding>
+                </configuration>
+            </plugin>
+
+            <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-gpg-plugin -->
+            <!-- 安装：https://www.gpg4win.org/thanks-for-download.html -->
+            <!--
+                1、新建密钥对
+                2、生成密钥对副本
+                3、上传公钥至目录服务器（手动上传（需要验证邮箱）：https://keys.openpgp.org/upload/）
+             -->
+            <!--
+                单个文件签名：
+                gpg &#45;&#45;armor &#45;&#45;detach-sign 文件名
+             -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-gpg-plugin</artifactId>
+                <version>3.0.1</version>
+                <executions>
+                    <execution>
+                        <id>sign-artifacts</id>
+                        <phase>verify</phase>
+                        <goals>
+                            <goal>sign</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+
+            <!-- https://mvnrepository.com/artifact/pl.project13.maven/git-commit-id-plugin -->
+            <!-- 使用插件文档（配置、属性等的所有详细信息...）：https://github.com/git-commit-id/git-commit-id-maven-plugin/blob/master/docs/using-the-plugin.md -->
+            <plugin>
+                <groupId>pl.project13.maven</groupId>
+                <artifactId>git-commit-id-plugin</artifactId>
+                <version>4.9.10</version>
+                <executions>
+                    <execution>
+                        <id>get-the-git-infos</id>
+                        <goals>
+                            <!-- 父子项目必须添加 -->
+                            <goal>revision</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <!-- 父子项目必须添加 -->
+                    <generateGitPropertiesFile>true</generateGitPropertiesFile>
+                    <offline>true</offline>
+                    <!-- 输出详细内容 -->
+                    <verbose>true</verbose>
+                    <!-- 日期格式化时区 -->
+                    <dateFormatTimeZone>${user.timezone}</dateFormatTimeZone>
+                    <!-- 日期格式化 -->
+                    <dateFormat>yyyy-MM-dd HH:mm:ss</dateFormat>
+                    <!-- 数据格式 -->
+                    <format>json</format>
+                    <!-- 配置文件 -->
+                    <generateGitPropertiesFilename>
+                        ${project.build.outputDirectory}/git.json
+                    </generateGitPropertiesFilename>
+                    <!-- 忽略 -->
+                    <excludeProperties>
+                        <!-- 提交消息的原始正文（未包装的主题和正文） -->
+                        <excludeProperty>git.commit.message.full</excludeProperty>
+                        <!-- 表示提交消息的主题 - 可能不适合文件名 -->
+                        <excludeProperty>git.commit.message.short</excludeProperty>
+                    </excludeProperties>
+                </configuration>
+            </plugin>
+
         </plugins>
     </build>
 
